--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
-    "grunt-cson": "~0.8.0"
+    "grunt-cson": "~0.8.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-shell": "~0.7.0",
+    "coffee-script": "~1.7.1",
   }
 }
